<resources>
    <string name="app_name">MyChat</string>

    <string name="title_activity_main">MainActivity</string>

    <string name="welcome_text">来往&#8212;&#8212;传递给你我的思念</string>
    <string name="register">注册</string>
    <string name="login">登录</string>
    <string name="title_activity_register">注册</string>

    <string name="hint_login_phone_number">手机号</string>
    <string name="hint_register_phone_number">注册手机号</string>
    <string name="hint_login_password">密码</string>
    <string name="hint_sms_code">短信验证码</string>
    <string name="hint_forget_password_reset">请输入新密码,为8-16位的非纯数字</string>
    <string name="toast_error_phone_number_null">手机号不能为空</string>
    <string name="toast_error_sms_code_null">验证码不能为空</string>
    <string name="next_step">下一步</string>
    <string name="send_sms_code">获取验证码</string>
    <string name="button_register_activity_register">完成并登录</string>

    <string name="login_username_hint">请输入用户名&#8230;</string>
    <string name="login_password_hint">请输入密码&#8230;</string>
    <string name="login_email_hint">请在此输入密码&#8230;</string>
    <string name="register_txt1">还没有账号？</string>
    <string name="register_txt2">立即注册 ></string>
    <string name="login_account">账号 </string>
    <string name="pwd">密码 </string>
    <string name="pwd_confirm">请再次键入密码 </string>
    <string name="pwd_forget">忘记密码?</string>
    <string name="finish">完成</string>
    <string name="message_search_hint">搜索&#8230;</string>

    <string name="main_tab_recent">会话</string>
    <string name="main_tab_contact">联系人</string>
    <string name="mian_tab_set">设置</string>

    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载&#8230;</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>

    <string name="add_avator">头像</string>
    <string name="add_nick">昵称</string>
    <string name="add_name">账号</string>
    <string name="add_name_hint">请输入昵称&#8230;</string>
    <string name="add_gender">性别</string>
    <string name="friend_circle">朋友圈</string>
    <string name="task">任务</string>
    <string name="task_detail">任务详情</string>

    <string name="set_notify">接收新消息通知</string>
    <string name="set_myinfo">个人资料</string>
    <string name="set_blacklist">黑名单</string>
    <string name="set_voice">声音</string>
    <string name="set_vibrate">震动</string>
    <string name="tips">提示</string>

    <string name="logout">退出登陆</string>
    <string name="pop_photo">拍照</string>
    <string name="pop_choose">从手机相册选中</string>
    <string name="network_tips">当前网络不可用,请检查您的网络!</string>
    <string name="toast_error_password_null">密码不能为空</string>
    <string name="toast_error_username_null">用户名不能为空</string>
    <string name="toast_error_password_twice_not_match">输入的两次密码不一致</string>

    <string name="blacklist">黑名单</string>
    <string name="chat">发起会话</string>
    <string name="add_friend">添加好友</string>

    <string name="send_state">已读</string>

    <string name="longclick_speak">长按说话</string>
    <string name="picture">照片</string>
    <string name="camera">拍摄</string>
    <string name="location">位置</string>

    <string name="black_tips">已添加至黑名单，你将不再收到对方的消息!</string>

    <string name="username">用户名</string>
    <string name="search">搜索</string>

    <string name="new_friends">新朋友</string>

    <string name="near_people">附近的人</string>

    <string name="voice_up_tips">手指上滑,取消发送</string>
    <string name="voice_cancel_tips">松开手指，取消发送</string>

    <string name="voice_seconds_tips">还可以说%1$s秒</string>

    <string name="voice_short_tips">录音时间太短</string>

    <string name="action_search">搜索</string>
    <string name="action_plus">功能</string>
    <string name="action_album">我的相册</string>
    <string name="action_collection">我的收藏</string>
    <string name="action_card">我的银行卡</string>
    <string name="action_settings">设置</string>
    <string name="action_feed">意见反馈</string>
    <string name="plus_group_chat">发起群聊</string>
    <string name="plus_add_friend">添加朋友</string>
    <string name="plus_video_chat">视频聊天</string>
    <string name="plus_scan">扫一扫</string>
    <string name="plus_take_photo">拍照分享</string>
    <string name="plus_publish_task">发布任务</string>
    <string name="title_activity_new_friend">新的朋友</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_chat">聊天</string>
    <string name="title_activity_location">定位</string>
    <string name="title_activity_image_browser">查看图像</string>
    <string name="title_activity_forget_password">忘记密码</string>
    <string name="title_activity_reset_password">重置密码</string>
    <string name="title_activity_publish_task">发布任务</string>
    <string name="title_activity_my_qrcode">我的二维码</string>
    <string name="title_activity_friend_circle">朋友圈</string>
    <string name="title_activity_task">任务</string>
    <string name="title_activity_task_detail">任务详情</string>
    <string name="title_activity_add_task">新建任务</string>
</resources>
