<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.hornettao.mychat.activity.ForgetPasswordActivity">

    <EditText
        android:id="@+id/edit_text_register_phone_number"
        style="@style/LoginActivity.EditText"
        android:layout_width="250dp"
        android:inputType="textPassword"
        android:layout_below="@id/edit_text_phone_number"
        android:layout_marginTop="50dp"
        android:hint="@string/hint_register_phone_number"/>

    <EditText
        android:id="@+id/edit_text_sms_code"
        style="@style/LoginActivity.EditText"
        android:inputType="textPassword"
        android:layout_width="120dp"
        android:layout_below="@id/edit_text_register_phone_number"
        android:layout_alignLeft="@id/edit_text_register_phone_number"
        android:layout_marginTop="30dp"
        android:hint="@string/hint_sms_code"/>

    <Button
        android:id="@+id/button_send_sms_code"
        style="@style/LoginActivity.Button"
        android:layout_width="120dp"
        android:layout_below="@id/edit_text_register_phone_number"
        android:layout_alignRight="@id/edit_text_register_phone_number"
        android:layout_marginTop="30dp"
        android:text="@string/send_sms_code"/>

    <Button
        android:id="@+id/button_next_step"
        style="@style/LoginActivity.Button"
        android:layout_width="230dp"
        android:layout_below="@id/edit_text_sms_code"
        android:layout_marginTop="30dp"
        android:text="@string/next_step"/>

</RelativeLayout>
