<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <ImageView
            android:id="@+id/image_view_login"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="50dp"
            android:layout_centerHorizontal="true"
            android:scaleType="centerInside"
            android:src="@mipmap/ic_launcher" />

        <EditText
            android:id="@+id/edit_text_phone_number"
            style="@style/LoginActivity.EditText"
            android:layout_below="@id/image_view_login"
            android:layout_marginTop="50dp"
            android:hint="@string/hint_login_phone_number"/>

        <EditText
            android:id="@+id/edit_text_password"
            style="@style/LoginActivity.EditText"
            android:inputType="textPassword"
            android:layout_below="@id/edit_text_phone_number"
            android:layout_marginTop="10dp"
            android:hint="@string/hint_login_password"/>

        <Button
            android:id="@+id/button_login"
            style="@style/LoginActivity.Button"
            android:layout_below="@id/edit_text_password"
            android:layout_marginTop="30dp"
            android:text="@string/login"/>

        <TextView
            android:id="@+id/text_view_forget_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/button_login"
            android:layout_marginTop="30dp"
            android:layout_alignRight="@id/button_login"
            android:text="@string/pwd_forget"
            android:textSize="14sp"
            android:textColor="#60b685"
            android:clickable="true"/>

    </RelativeLayout>
</ScrollView>