<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.hornettao.mychat.activity.ResetPasswordActivity">

    <EditText
        android:id="@+id/edit_text_new_password"
        style="@style/LoginActivity.EditText"
        android:layout_width="250dp"
        android:inputType="textPassword"
        android:layout_below="@id/edit_text_phone_number"
        android:layout_marginTop="50dp"
        android:hint="@string/hint_forget_password_reset"/>

    <EditText
        android:id="@+id/edit_text_new_password_confirm"
        style="@style/LoginActivity.EditText"
        android:layout_width="250dp"
        android:inputType="textPassword"
        android:layout_below="@id/edit_text_new_password"
        android:layout_marginTop="30dp"
        android:hint="@string/pwd_confirm"/>

    <Button
        android:id="@+id/button_finish"
        style="@style/LoginActivity.Button"
        android:layout_width="230dp"
        android:layout_below="@id/edit_text_new_password_confirm"
        android:layout_marginTop="30dp"
        android:text="@string/finish"/>

</RelativeLayout>
