<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_all"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme_bg_color"
    android:orientation="vertical" >

    <View
        android:layout_width="fill_parent"
        android:layout_height="22dp"
        android:background="@color/standard_gray_bg"/>


    <RelativeLayout
        android:id="@+id/layout_friend_circle"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="@mipmap/about_mid_bg"
        android:padding="10dp" >

        <ImageView
            android:id="@+id/image_view_1"
            android:layout_marginLeft="16dp"
            android:layout_alignParentLeft="true"
            style="@style/MyChat.ImageView"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/action_settings"
            android:src="@mipmap/circle" />


        <TextView
            android:layout_toRightOf="@id/image_view_1"
            android:layout_marginLeft="16dp"
            style="@style/MyChat.TextView._Black"
            android:layout_centerVertical="true"
            android:text="@string/friend_circle" />
    </RelativeLayout>


    <View
        android:layout_width="fill_parent"
        android:layout_height="22dp"
        android:background="@color/standard_gray_bg"/>

    <RelativeLayout
        android:id="@+id/layout_task"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@mipmap/about_mid_bg"
        android:padding="10dp" >

        <ImageView
            android:id="@+id/image_view_2"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="16dp"
            style="@style/MyChat.ImageView"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/action_settings"
            android:src="@mipmap/task_find" />



        <TextView
            android:layout_toRightOf="@id/image_view_2"
            style="@style/MyChat.TextView._Black"
            android:layout_marginLeft="16dp"
            android:layout_centerVertical="true"
            android:text="@string/task" />

    </RelativeLayout>


    <View
        android:layout_width="fill_parent"
        android:layout_height="22dp"
        android:background="@color/standard_gray_bg"/>

    <RelativeLayout
        android:id="@+id/layout_scan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@mipmap/about_mid_bg"
        android:padding="10dp" >

        <ImageView
            android:id="@+id/image_view_3"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="16dp"
            style="@style/MyChat.ImageView"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/action_settings"
            android:src="@mipmap/scan" />



        <TextView
            android:layout_toRightOf="@id/image_view_3"
            style="@style/MyChat.TextView._Black"
            android:layout_marginLeft="16dp"
            android:layout_centerVertical="true"
            android:text="@string/plus_scan" />

    </RelativeLayout>

    <!--<RelativeLayout-->
        <!--android:id="@+id/layout_gender"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:background="@mipmap/about_mid_bg"-->
        <!--android:padding="10dp" >-->

        <!--<TextView-->
            <!--style="@style/MyChat.TextView._Black"-->
            <!--android:layout_alignParentLeft="true"-->
            <!--android:layout_centerVertical="true"-->
            <!--android:text="@string/add_gender" />-->

        <!--<LinearLayout-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_alignParentRight="true"-->
            <!--android:layout_centerVertical="true"-->
            <!--android:gravity="center_vertical"-->
            <!--android:orientation="horizontal" >-->

            <!--<TextView-->
                <!--android:id="@+id/tv_set_gender"-->
                <!--style="@style/MyChat.TextView._Black"-->
                <!--android:layout_marginRight="20dp"-->
                <!--android:drawablePadding="10dp" />-->

        <!--</LinearLayout>-->
    <!--</RelativeLayout>-->

    <!--<Button-->
        <!--android:id="@+id/btn_add_friend"-->
        <!--style="@style/MyChat.Button.theme"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="45dp"-->
        <!--android:layout_marginLeft="@dimen/activity_vertical_margin"-->
        <!--android:layout_marginRight="@dimen/activity_vertical_margin"-->
        <!--android:layout_marginTop="@dimen/activity_vertical_margin"-->
        <!--android:text="@string/add_friend"-->
        <!--android:visibility="gone" />-->

    <!--<Button-->
        <!--android:id="@+id/btn_chat"-->
        <!--style="@style/MyChat.Button.theme"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="45dp"-->
        <!--android:layout_marginLeft="@dimen/activity_vertical_margin"-->
        <!--android:layout_marginRight="@dimen/activity_vertical_margin"-->
        <!--android:layout_marginTop="@dimen/activity_vertical_margin"-->
        <!--android:text="@string/chat" />-->

    <!--<Button-->
        <!--android:id="@+id/btn_back"-->
        <!--style="@style/MyChat.Button.logout"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="45dp"-->
        <!--android:layout_marginLeft="@dimen/activity_vertical_margin"-->
        <!--android:layout_marginRight="@dimen/activity_vertical_margin"-->
        <!--android:layout_marginTop="@dimen/activity_vertical_margin"-->
        <!--android:text="@string/blacklist" />-->

    <!--<RelativeLayout-->
        <!--android:id="@+id/layout_black_tips"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginTop="10dp"-->
        <!--android:padding="10dp"-->
        <!--android:visibility="gone" >-->

        <!--<TextView-->
            <!--style="@style/MyChat.TextView._Black"-->
            <!--android:layout_centerInParent="true"-->
            <!--android:text="@string/black_tips"-->
            <!--android:textSize="14sp" />-->
    <!--</RelativeLayout>-->

</LinearLayout>